# zarr-imagecodecs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  pyproject.toml
python/zarr_imagecodecs/: __init__.py  _codecs.py
src/: avif_codec.rs  dicom_rle.rs  htj2k.rs  jpeg.rs  jpeg2k.rs  jpegls.rs  jpegxl.rs  lib.rs  packbits.rs  png_codec.rs  tiff_codec.rs  webp.rs
